[package]
name = "termdrawserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dotenvy = "0.15.6"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[features]
models = []
